# Cipher-Diary

./: PASSWORD_CHANGE_SAFETY.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  vault.rs
src/lib/: api.ts  types.ts
src/lib/components/: MainView.svelte  UnlockView.svelte  UnlockView.svelte.d.ts
src/lib/stores/: vault.ts
src/routes/: +page.svelte
