[package]
name = "diary"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = { version = "0.10", features = ["aes"] }
aes = "0.8"
ctr = "0.9"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
base64 = "0.22"
rand = { version = "0.8", features = ["std"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["macros", "serde", "formatting"] }
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"

